<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido"
        android:id="@+id/bienvenidoText"
        android:textStyle="bold"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ayudaInfo"
        android:id="@+id/ayudaText"
        android:textStyle="bold"
        android:layout_marginTop="15dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_marginTop="15dp"
        android:background="@drawable/ex"
        android:layout_gravity="center_horizontal"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_horizontal"
    android:layout_weight="1">
    <Button
        android:layout_width="0dp"
        android:layout_weight="0.65"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        android:id="@+id/volver"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button"
        android:textStyle="bold"
        android:layout_marginTop="15dp"/>
</LinearLayout>
</LinearLayout>