<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/casillas"
            android:id="@+id/casillasText"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="0.4"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bombas"
            android:id="@+id/bombasText"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="0.4"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descubrir"
            android:id="@+id/tiempoText"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="0.2"/>
    </LinearLayout>
<GridView
    android:id="@+id/gridview"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:numColumns="auto_fit"

    android:horizontalSpacing="0dp"
    android:gravity="center"
    android:layout_marginTop="15dp"
    />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Progreso"
        android:id="@+id/textView"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal" />

    <ProgressBar
    style="?android:attr/progressBarStyleHorizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/progressBar"

    android:progressDrawable="@drawable/progressbar"
    android:background="@drawable/progressbar"
        />


</LinearLayout>